align term intro with first sidebar widget header. fixes #114

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -1286,7 +1286,7 @@ img.alignright,
 
 .archive-description,
 .term-intro {
-  margin: 40px 0;
+  margin: 0 0 40px;
   color:$c_taxonomyIntroText;
   font: {
     weight: 700;
